# a_game

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  RL_SETUP.md  TRAINING_GUIDE.md
agent/: .gitignore  INTEGRATION.md  KNOWN_ISSUES.md  README.md  RENDER_MODE.md  TROUBLESHOOTING.md  pyproject.toml
agent/envs/: __init__.py  starship_env.py
agent/scripts/: evaluate.py  quick_start.sh  test_connection.py  test_game_over.py  test_reset.py  test_training.py  train.py
agent/utils/: game_bridge.c  game_bridge.h
include/: asset_manager.h  common.h  embedded_assets.h  game.h  physics.h
src/: asset_manager.c  game.c  hello.c main.c  main.c  physics.c  timer.c  timer.h
